# maya-python-scripts

./: .gitignore  FlightGenerator.py  HandSideStepGenerator.py  LICENSE  README.md  SceneCleanup.py  SimpleCRig.py  autoControlRig.py  blendshapeSetup.py  clipSetter.py  crash_logger.py  exceptions.txt  gltfIo.py  handWalkCycleGenerator.py  install_shelf.py  maya_display.py  pyproject.toml  renderLayerSetter.py  runCycleGenerator.py  sideStepGenerator.py  source2Importer.py  tailSwingAndWiggleGenerator.py  toolsWindow.py  ui_word_weighting.py  walkcycleGenerator.py
.github/workflows/: lint.yml
anim_gen_v2/: __init__.py  launcher.py
anim_gen_v2/core/: __init__.py  channel.py  engine.py  patterns.py  presets.py  resolver.py
anim_gen_v2/layers/: __init__.py  run_primary.py  sidestep_primary.py  walk_arms.py  walk_primary.py  walk_secondary.py
animation_generators/: __init__.py  base.py  flight.py  hand_side_step.py  hand_walk_cycle.py  launcher.py  run_cycle.py  side_step.py  tail_wiggle.py  walk_cycle.py
auto_control_rig/: builder.py  constants.py  controls.py  debug.py  helpers.py  mapping.py  operations.py  skeleton.py  stretchy.py  twist.py  ui.py  utils.py
blendshape_setup/: __init__.py  diagnostics.py  logic.py  ui.py
clip_setter/: __init__.py  clips.py  export.py  ui.py
gltf_io/: __init__.py  exporter.py  fbx2gltf.py  importer.py  native_importer.py  plugin.py  ui.py
render_layer_setter/: logic.py  run.py
source2_importer/: kv3.py  materials.py  pipeline.py  ui.py  vrf.py
tools_window/: chain_creator.py  chypershade.py  logic.py  ui.py
(+30 files in other folders)
